<http://webkit.org/b/59725> -[WebFullscreenWindow initWithContentRect:styleMask:backing:defer:] leaks a CALayer

Reviewed by Dan Bernstein.

* WebView/WebFullScreenController.mm:
(-[WebFullscreenWindow initWithContentRect:styleMask:backing:defer:]):
Use a RetainPtr to hold the CALayer and to fix the leak.

Canonical link: https://commits.webkit.org/74959@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85248 268f45cc-cd09-0410-ab3c-d52691b4dbfc